Fix z-index bug causing modal boxes to show up behind screen

--- a/web/static/css/styles.less
+++ b/web/static/css/styles.less
@@ -12,7 +12,6 @@ html, body {
     position: relative;
     clear: both;
     background: #fff;
-    z-index: 1;
 }
 
 .wrapper {
